Fix: desktop computer image margin, nav gap, card scroll position

--- a/style.css
+++ b/style.css
@@ -658,7 +658,7 @@ body {
 
 .nav {
     display: flex;
-    gap: 25px;
+    gap: 35px;
 }
 
 .nav a {
@@ -7271,7 +7271,7 @@ button[class*="btn-"]:hover,
         max-width: none;
         height: auto;
         margin-left: -15%;
-        margin-top: -130px;
+        margin-top: -400px;
         display: block;
     }
 
